feat: 添加日语支持并优化国际化配置 wip
添加日语(ja-JP)语言支持，包括翻译文件和段落内容
更新国际化加载器和配置，修复.gitignore重复条目
优化HomePage赞助者标题的翻译处理
添加unplugin-auto-import插件以简化i18n API导入

--- a/languages/translates/paragraphs/undefined.html
+++ b/languages/translates/paragraphs/undefined.html
@@ -1,14 +1,24 @@
 <!-- 
     id:     
     scope:  
-    file:  zh-CN\index.md 
-    rang:  87-112 
+    file:  zh-CN\笔记\🎬 项目\Nolebase 集成.md 
+    rang:  56-199 
 -->
 
-<div language="zh-CN">知在</div>
+<div language="zh-CN">
+# 知在 集成
+
+是在 2023 年 7 月由我主动发起的，从 [[Nolebase|Nólëbase]] 的插件实现中分离、解耦若干插件，优化用户体验和阅读体验，以及实现 Obsidian 和 VitePress 双向可用的项目。
+</div>
 <div language="en-US" done="true">
-Know in
+#Knowledge in Integration
+It was initiated by me in July 2023 to separate and decouple several plugins from the plugin implementation of [Nolebase | No ́ le ̈ base], optimize user experience and reading experience, and achieve bidirectional usability of Obsidian and VitePress.
+</div>
+<div language="ja-JP" done="true">
+#知在統合
+2023年7月に私が主導した、［［Nolebase|Nólëbase］］のプラグイン実装からいくつかのプラグインを分離、デカップリングし、ユーザー体験と読書体験を最適化し、ObsidianとVitePressの双方向利用可能なプロジェクトを実現します。
 </div>
 <div language="ko-KR" done="true">
-지적
+# 통합 정보
+2023년 7월에 제가 자발적으로 시작했습니다. [[Nolebase → Nó le ̈ base]]의 플러그인 구현에서 몇 개의 플러그인을 분리, 디커플링, 사용자 경험과 읽기 경험 최적화, Obsidian과 VitePress를 양방향으로 사용할 수 있는 프로젝트를 실현했습니다.
 </div>
